Introduce "real" integration tests